# gemini-assignment

./: .gitignore  pyproject.toml  requirements.txt  run.py
taurus/: config.py  domain.py  exception.py  gemini_client.py  mixer.py  spreaders.py  user_io.py  util.py
test/integration/: test_run.py
test/unit/: test_mixer.py  test_spreaders.py  test_util.py
