[tool.poetry]
name = "gemini-assignment"
version = "0.1.0"
description = ""
authors = ["Marcus <marcuslimdw@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.19.0"
click = "^8.0.1"
aioconsole = "^0.3.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-asyncio = "^0.15.1"
black = "^21.9b0"

[tool.poetry.scripts]
client = "taurus.run:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
